--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
             "command": "g++",
             "args":[
                 "-g",
-                "${fileDirname}/*.cpp"
+                "${file}"
             ],
             "group":{
                 "kind": "build",
